force-app/main/default/objects/ilms__Impact_LMS_Fonts__c/ilms__Impact_LMS_Fonts__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Impact LMS Fonts</description>
    <label>Impact LMS Fonts</label>
</CustomObject>