force-app/main/default/objects/ilms__Impact_LMS_Fonts__c/fields/ilms__Font__c.field-meta.xml
<CustomField>
    <fullName>ilms__Font__c</fullName>
    <label>Font</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>