force-app/main/default/objects/ilms__Impact_LMS_Fonts__c/fields/ilms__Link__c.field-meta.xml
<CustomField>
    <fullName>ilms__Link__c</fullName>
    <label>Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>