force-app/main/default/objects/ilms__Impact_LMS_Fonts__c/fields/ilms__Path__c.field-meta.xml
<CustomField>
    <fullName>ilms__Path__c</fullName>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>