force-app/main/default/objects/ilms__Impact_LMS_Fonts__c/fields/ilms__Resource__c.field-meta.xml
<CustomField>
    <fullName>ilms__Resource__c</fullName>
    <label>Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>